--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.18.0",
     "lucide-react": "^0.471.1",
     "next": "14.2.16",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
